...
    <!-- SearchFragView -->
    <string name="search_view">Location Search</string>
    <string name="btn_seach_description">Search</string>
    <string name="edt_location_hint">Enter a location</string>
    <string name="txt_location_placeholder">Coupertino</string>
    <string name="display_all_on_map">Display All on Map</string>
    <string name="no_results">No Results</string>
    <string name="btn_show_location">Show location</string>

    <!-- MapActView -->
    <string name="map_view_title">Location View</string>
    <string name="map_view_subtitle_display_all_mode">Display all mode</string>
    <string name="delete_confirmation">Are you sure?</string>
...
