...
    <string name="log_in_as_guest">Log in as Guest</string>
    <string name="btn_guest_cnt_desc_login_as_guest">Button to Login as Guest</string>
    <string name="btn_login_cnt_desc_to_login_as_guest">Button to Login as Guest</string>
    <string name="facebook_e_mail">Facebook e-mail</string>
    <string name="password">Password</string>
    <string name="weather_image_description">weather image description</string>
    <string name="logged_as">You are logged as %1$s</string>
    <string name="location_source_gps">GPS</string>
    <string name="check_permissions">Check the permissions</string>
</resources>

